refactored tests to not use .env variables